--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.3",
     "react-router": "^7.9.5",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
